# bibleaquifer.github.io

./: .gitignore  BUILD.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  app.js  build_site.py  catalog.html  catalog.js  generate_sample.py  index.html  index.js  pyproject.toml  styles.css  test_build.py
.claude/: settings.local.json
nav/: AquiferOpenBibleDictionary_apd.json  AquiferOpenBibleDictionary_arb.json  AquiferOpenBibleDictionary_eng.json  AquiferOpenBibleDictionary_fra.json  AquiferOpenBibleDictionary_hin.json  AquiferOpenBibleDictionary_ind.json  AquiferOpenBibleDictionary_nep.json  AquiferOpenBibleDictionary_nld.json  AquiferOpenBibleDictionary_por.json  AquiferOpenBibleDictionary_rus.json  AquiferOpenBibleDictionary_swh.json  AquiferOpenBibleDictionary_zht.json  AquiferOpenStudyNotesBookIntroSummaries_nep.json  AquiferOpenStudyNotesBookIntroSummaries_zht.json  AquiferOpenStudyNotesBookIntros_arb.json  AquiferOpenStudyNotesBookIntros_ind.json  AquiferOpenStudyNotesBookIntros_rus.json  AquiferOpenStudyNotesBookIntros_swh.json  AquiferOpenStudyNotesProfiles_arb.json  AquiferOpenStudyNotesProfiles_eng.json  AquiferOpenStudyNotesProfiles_fra.json  AquiferOpenStudyNotesProfiles_hin.json  AquiferOpenStudyNotesProfiles_por.json  AquiferOpenStudyNotesProfiles_spa.json  AquiferOpenStudyNotesProfiles_swh.json  AquiferOpenStudyNotesProfiles_zht.json  AquiferOpenStudyNotesThemes_arb.json  AquiferOpenStudyNotesThemes_eng.json  AquiferOpenStudyNotesThemes_fra.json  AquiferOpenStudyNotesThemes_hin.json  AquiferOpenStudyNotesThemes_ind.json  (+151 more)
(+5 files in other folders)
