[project]
name = "bibleaquifer-site-generator"
version = "0.1.0"
description = "Static site generator for BibleAquifer"
authors = [
    {name = "copilot-swe-agent[bot]",email = "198982749+Copilot@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml (>=6.0.3,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
